# mijen

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
src/mijen/: __init__.py  main.py  models.py  runner.py  scheduler.py  storage.py
src/mijen.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mijen/ui/: theme.py
src/mijen/ui/pages/: home.py  projects.py  setup.py
